--- a/app.json
+++ b/app.json
@@ -1,9 +1,35 @@
 {
-  // 配置所有的页面
   "pages":[
     "pages/index/index",
-    "pages/logs/logs"
+    "pages/logs/logs",
+    "pages/Order/Order"
   ],
+  "tabBar": {
+    "color":"black",
+    "backgroundColor":"#fff",
+    "borderStyle":"white",
+    "selectedColor":"#1296db",
+    "list": [
+      {
+        "pagePath": "pages/index/index",
+        "text": "首页",
+        "iconPath":"images/home.png",
+        "selectedIconPath":"images/homeSelected.png"
+      },
+      {
+        "pagePath": "pages/Order/Order",
+        "text": "订单",
+        "iconPath": "images/orderedlist.png",
+        "selectedIconPath": "images/orderedlistSelected.png"
+      },
+      {
+        "pagePath": "pages/logs/logs",
+        "text": "我的",
+        "iconPath": "images/user.png",
+        "selectedIconPath": "images/userSelected.png"
+      }
+    ]
+  },
   "window":{
     "backgroundTextStyle":"light",
     "navigationBarBackgroundColor": "#fff",
