20190317-scroll微信原声使用
获取设备信息，响应式开发

--- a/app.json
+++ b/app.json
@@ -36,5 +36,10 @@
     "navigationBarBackgroundColor": "#fff",
     "navigationBarTextStyle": "black",
     "navigationStyle": "custom"
+  },
+  "usingComponents": {
+    "navigationBar": "components/navigationBar/navigayionBar",
+    "scroll": "components/scroll/scroll",
+    "containter": "components/containter/containter"
   }
 }
